APM 1.0.1        12 Nov 2011
----------------------------
Changed:
- Base install dir for web files, now in php/PECL/APM

Fixed:
- Bug #60276 pecl install fail installing APM

APM 1.0.0        14 Jun 2011
----------------------------
Fixed:
- Script filename could possibly not be filled in case of slow request

APM 1.0.0beta3    7 Nov 2010
----------------------------
Added:
- MySQL driver
- Per driver error reporting level
- Asynchronous processing of events (config option: apm.deffered_processing)

Changed:
- Code refactored to make use of 'APM drivers'

Fixed:
- APM cannot be compiled with PHP < 5.2.2
- Bug #17502: Drivers' rshutdown run only when slow_request tracking is enabled.
- Bug #17512: Sqlite connections aren't closed at the end of the request.
- Bug #17513: Using MySQL driver, only events of the first incoming request are stored.
- Bug #19421: apm.*_error_reporting is ignored.

APM 1.0.0beta2   29 Nov 2009
----------------------------
Fixed:
- Path used in tests were hardly fixed

APM 1.0.0beta1   29 Nov 2009
----------------------------
- Initial release.